--- a/style.css
+++ b/style.css
@@ -1,16 +1,38 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
+
 .hero-image{
-    background-image: url("./images/20240626_111238.jpg");
+    background-image: url("./images/Capture.PNG");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-    height: 352px;
+    height: 300px;
+    width: 100%;
 }
 .hero-text{
-    color:whitesmoke;
+    color:rgb(211,255,217);
+    font-family: "Dancing Script";
     position: absolute;
-    top: 180px;
+    top: 80px;
     width:100%;
     text-align: center;
     font-size: 4rem;
+    margin: 0px;
+}
+
+p{
+    color: rgb(211, 255, 217);
+    position: absolute;
+    top: 190px;
+    width:100%;
+    text-align: center;
+    font-size: 3rem;
+    margin: 0px;
+}
+
+hr{
+    width:50%;
+    height:5px;
+    background-color:rgb(101,116,58);
+    border-width: 0;
 }
