--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Lobster&display=swap');
+
 
 .hero-image{
     background-image: url("./images/Capture.PNG");
@@ -11,26 +13,30 @@
 }
 .hero-text{
     color:rgb(211,255,217);
-    font-family: "Dancing Script";
+    font-family: "Bebas Neue";
     position: absolute;
     top: 80px;
     width:100%;
     text-align: center;
-    font-size: 4rem;
+    font-size: 5rem;
     margin: 0px;
 }
 
-p{
+#hero-under-text{
     color: rgb(211, 255, 217);
+    margin-top: 50px;
+    font-family: "Lobster";
     position: absolute;
     top: 190px;
     width:100%;
     text-align: center;
-    font-size: 3rem;
-    margin: 0px;
+    font-size: 2.5rem;
+    margin-top: 20px;
 }
 
 hr{
+    margin-top: 10px;
+    margin-bottom: 20px;
     width:50%;
     height:5px;
     background-color:rgb(101,116,58);
