--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Lobster&display=swap');
 
 
-.hero-image{
+.hero-image-home{
     background-image: url("./images/Capture.PNG");
     background-position: center;
     background-repeat: no-repeat;
@@ -34,7 +34,7 @@
     margin-top: 20px;
 }
 
-hr{
+.menu-line-hero{
     margin-top: 10px;
     margin-bottom: 20px;
     width:50%;
@@ -42,3 +42,37 @@ hr{
     background-color:rgb(101,116,58);
     border-width: 0;
 }
+
+.menu-line{
+    margin-top: 10px;
+    margin-bottom: 20px;
+    width:100%;
+    height:5px;
+    background-color:rgb(101,116,58);
+    border-width: 0;
+}
+
+.home-page-grid {
+    display: grid;
+    grid-template-columns: repeat(13, 1fr);
+    grid-template-rows: repeat(26, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    }
+    
+    .menu-line { grid-area: 1 / 1 / 2 / 14; }
+    .heading-txt { grid-area: 3 / 5 / 4 / 10; }
+    . { grid-area: 5 / 2 / 8 / 5; }
+    .div4 { grid-area: 5 / 6 / 8 / 9; }
+    .div5 { grid-area: 5 / 10 / 8 / 13; }
+    .div6 { grid-area: 9 / 2 / 10 / 5; }
+    .div7 { grid-area: 9 / 6 / 10 / 9; }
+    .div8 { grid-area: 9 / 10 / 10 / 13; }
+    .div9 { grid-area: 11 / 1 / 12 / 14; }
+    .div10 { grid-area: 13 / 1 / 17 / 14; }
+    .div11 { grid-area: 18 / 5 / 19 / 10; }
+    .div12 { grid-area: 20 / 1 / 21 / 14; }
+    .div13 { grid-area: 22 / 1 / 27 / 14; }
+    .div14 { grid-area: 23 / 6 / 24 / 9; }
+    .div15 { grid-area: 25 / 6 / 26 / 9; }    
+
