--- a/style.css
+++ b/style.css
@@ -157,12 +157,12 @@ hr{
     color: rgb(10, 18, 42);
     font-family: "Bebas Neue";
     top: 20px;
-    width:100%;
-    text-align: center;
     font-size: 2.5rem;
     margin-top: 10px;
     text-decoration: none;
-}
+    align-self:center ;
+    text-align: right;
+  }
 
 .three-col-img{
     width:100%;
@@ -193,4 +193,42 @@ hr{
 .hero-image-home2{
   width: 100%;
   align-self: center;
+  min-height: 450px; 
+      
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  size: cover;
+}
+
+.two-column-left{
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  gap: 50px;
+  width: 80%;
+  margin: auto;
+  margin-top: 40px;
+}
+
+
+.info{
+  font-size: 1em;
+  text-align:center;
+}
+
+.experiences-img{
+  width: 100%;
+  border-radius: 5px;
+}
+
+.experiences-hero-img{
+  background-image: url("./images/experiences-hero-img.jpeg");
+      
+
+        min-height: 450px; 
+      
+        background-attachment: fixed;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
 }
