--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Lobster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
 body{
     background-color: rgb(221, 255, 217);
@@ -41,16 +42,13 @@ ul {
     font-size: 1.5rem;
     margin-top: 25px;
     margin-right: 10px;
+    text-decoration: none;
+    color: rgb(10, 18, 42);
   }
   
   .other-buttons:hover {
     background-color: rgb(171, 44, 65);
   }
-
-#book-now{
-    background-color:rgb(66,99,63) ;
-    color:rgb(221,255,);
-}
 
 .hero-image{
     margin-top: 100px;
@@ -61,7 +59,7 @@ ul {
 }
 
 .hero-image-home{
-    background-image: url("./images/hero-image.jpg");
+    background-image: url("./images/hero-image-home.jpg");
       
 
         min-height: 450px; 
@@ -123,7 +121,7 @@ hr{
 .home-page-grid {
     display: grid;
     grid-template-columns: repeat(13, 0.5fr);
-    grid-template-rows: repeat(26, 0.5fr);
+    grid-template-rows: repeat(8, 0.5fr);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     }
@@ -137,12 +135,9 @@ hr{
     .div7 { grid-area: 3 / 6 / 4/ 9; }
     .div8 { grid-area: 3 / 10 / 4 / 13; }
     .div9 { grid-area: 4 / 1 / 5 / 14; }
-    .div10 { grid-area: 5 / 1 / 9 / 14; }
-    .div11 { grid-area: 9 / 3 / 10 / 12; }
-    .div12 { grid-area: 20 / 1 / 21 / 14; }
-    .div13 { grid-area: 22 / 1 / 27 / 14; }
-    .div14 { grid-area: 23 / 6 / 24 / 9; }
-    .div15 { grid-area: 25 / 6 / 26 / 9; }
+    .div10 { grid-area: 5 / 1 / 8 / 14; }
+    .div11 { grid-area: 8 / 3 / 9 / 12; }
+    .div12 { grid-area: 9 / 1 / 9 / 14; }
 
 .menu-hdng{
     color: rgb(10, 18, 42);
@@ -176,14 +171,14 @@ hr{
 .about-grid {
   display: grid;
   grid-template-columns: repeat(13, 1fr);
-  grid-template-rows: repeat(7, 1fr);
+  grid-template-rows: repeat(4, 1fr);
   grid-column-gap: 0px;
   grid-row-gap: 0px;
   }
   
   .about-line { grid-area: 1 / 1 / 2 / 14; }
   .about-txt { grid-area: 1 / 2 / 3 / 13; }
-  .about-line2 { grid-area: 7 / 1 / 8 / 14; }
+  .about-line2 { grid-area: 4 / 1 / 5 / 14; }
 
 .about-txt{
   margin-top: 30px; 
@@ -201,6 +196,8 @@ hr{
         background-size: cover;
         border-radius: 2px;
         border-style: solid;
+        margin: bottom 50px;
+        padding-bottom: 50px;
 }
 
 .two-column-left{
@@ -235,6 +232,12 @@ hr{
 .info{
   font-size: 1em;
   text-align:center;
+  font-family: "Ubuntu";
+}
+
+#hero2-txt{
+  margin-top: 25px;
+  font-size: 1.3em;
 }
 
 .experiences-img{
@@ -266,3 +269,26 @@ hr{
 .experience-text-hdng{
   text-align: center;
 }
+
+.details-section {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  }
+  
+  .details-img { grid-area: 1 / 1 / 3 / 6; }
+  .details-txt { grid-area: 1 / 2 / 2 / 5; }
+
+.details-img{
+  background-color: rgb(130, 150, 75);
+
+}
+
+.details-txt{
+  margin-top: 15px;
+  margin-bottom: 15px;
+  text-align: center;
+}
+  
