--- a/style.css
+++ b/style.css
@@ -183,6 +183,8 @@ hr{
 .about-txt{
   margin-top: 30px; 
   text-align: center;
+  font-size: 1em;
+  font-family: "Ubuntu";
 }
 
 .hero-image-home2{
