strat booking form

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ ul {
     margin-top: 25px;
     margin-right: 10px;
     text-decoration: none;
-    color: rgb(10, 18, 42);
+    color: rgb(221,255,217);
   }
   
   .other-buttons:hover {
@@ -83,7 +83,7 @@ ul {
 }
 
 .hero-text{
-    color:rgb(189, 224, 185);
+    color:rgb(211, 255, 217);
     font-family: "Bebas Neue";
     position: absolute;
     top: 120px;
@@ -171,20 +171,24 @@ hr{
 .about-grid {
   display: grid;
   grid-template-columns: repeat(13, 1fr);
-  grid-template-rows: repeat(4, 1fr);
+  grid-template-rows: repeat(3, 1fr);
   grid-column-gap: 0px;
   grid-row-gap: 0px;
   }
   
   .about-line { grid-area: 1 / 1 / 2 / 14; }
   .about-txt { grid-area: 1 / 2 / 3 / 13; }
-  .about-line2 { grid-area: 4 / 1 / 5 / 14; }
+  .about-line2 { grid-area: 3 / 1 / 4 / 14; }
 
 .about-txt{
-  margin-top: 30px; 
+  margin-top: 75px; 
   text-align: center;
-  font-size: 1em;
+  font-size: 1.2em;
   font-family: "Ubuntu";
+}
+
+.about-line2{
+  margin-top: 100px;
 }
 
 .hero-image-home2{
@@ -243,7 +247,7 @@ hr{
 }
 
 .experiences-img{
-  width: 100%;
+  width: 400px;
   border-radius: 5px;
   border-style: solid;
 }
@@ -294,3 +298,34 @@ hr{
   text-align: center;
 }
   
+.booking-form {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  margin-top: 200px;
+  }
+  
+  .booking-hdng{ grid-area: 1 / 3 / 2 / 4;}
+  .contact-info { grid-area: 2 / 3 / 3 / 4; }
+  .experiences-choice { grid-area: 3 / 3 / 4 / 4; }
+  .submit{ grid-area: 4 / 3 / 5 / 4;}
+
+
+.booking-hdng{
+  text-align: center;
+}
+
+.contact-info{
+  text-align: center;
+}
+
+.experiences-choice{
+  margin-top: 10px;
+  margin-left: 20px;
+}
+
+.submit{
+  text-align: center;
+}
