--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ hr{
         background-size: cover;
         border-radius: 2px;
         border-style: solid;
-        margin: bottom 50px;
+        margin-bottom: 50px;
         padding-bottom: 50px;
 }
 
@@ -301,31 +301,58 @@ hr{
 .booking-form {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(4, 1fr);
+  grid-template-rows: repeat(3, 1fr);
   grid-column-gap: 0px;
   grid-row-gap: 0px;
-  margin-top: 200px;
+  margin-top: 50px;
   }
   
-  .booking-hdng{ grid-area: 1 / 3 / 2 / 4;}
-  .contact-info { grid-area: 2 / 3 / 3 / 4; }
-  .experiences-choice { grid-area: 3 / 3 / 4 / 4; }
-  .submit{ grid-area: 4 / 3 / 5 / 4;}
+  .contact-info { grid-area: 1 / 3 / 2 / 4; }
+  .booking-experience{ grid-area: 2 / 2 / 3 / 5; }
+  .experiences-choice { grid-area: 2 / 3 / 4 / 5; }
+  .submit{ grid-area: 3 / 3 / 4 / 4;}
 
 
 .booking-hdng{
   text-align: center;
+  font-family: "Ubuntu";
+}
+
+.booking-experience{
+  text-align: center;
+  font-family: "Ubuntu";
 }
 
 .contact-info{
   text-align: center;
+  font-family: "Ubuntu";
 }
 
 .experiences-choice{
-  margin-top: 10px;
-  margin-left: 20px;
+  font-family: "Ubuntu";
+  margin-left: 5%;
+  margin-top: 50px;
 }
 
 .submit{
   text-align: center;
+  font-family: "Ubuntu";
+  margin-top: 50px;
+}
+
+.booking-txt{
+  margin-top:auto;
+}
+
+
+.hero-image-booking{
+  background-image: url("./images/hero-img-booking.jpeg");
+      
+
+        min-height: 450px; 
+      
+        background-attachment: fixed;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
 }
