--- a/style.css
+++ b/style.css
@@ -2,12 +2,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Lobster&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
+
+/*This styles the background colour and resets all the margins and paddings*/
 body{
     background-color: rgb(221, 255, 217);
     margin:0px;
     padding:0px;
 }
 
+/*This styles the navbar and its colours*/
 ul {
     list-style-type: none;
     margin: 0;
@@ -20,14 +23,17 @@ ul {
     width: 100%;
   }
 
+  /*This makes the logo be on the left of the screen.*/
   .logo-link{
     float:left;
   }
 
+/*This styles the height of the logo*/
   .logo-img{
     height:75px;
   }
-  
+
+  /*This styles the colour and style of the buttons*/
   li a {
     display: block;
     color: rgb(10, 18, 42);
@@ -37,6 +43,7 @@ ul {
     text-decoration: none;
   }
 
+/*This styles buttons apart from the logo link*/
   .other-buttons{
     float:right;
     font-size: 1.5rem;
@@ -45,11 +52,13 @@ ul {
     text-decoration: none;
     color: rgb(221,255,217);
   }
-  
+
+  /*This styles the height of the logo*/
   .other-buttons:hover {
     background-color: rgb(171, 44, 65);
   }
 
+/*This styles the hero image that is on every page*/
 .hero-image{
     margin-top: 100px;
     background-size: cover;
@@ -58,6 +67,7 @@ ul {
     width: 100%;
 }
 
+/*This styles the image of the home page*/
 .hero-image-home{
     background-image: url("./images/hero-image-home.jpg");
       
@@ -70,7 +80,8 @@ ul {
         background-size: cover;
 }
 
-.hero-image-about{
+/*This styles the image of the about page*/
++.hero-image-about{
   background-image: url("./images/about-hero-img.png");
       
 
@@ -82,6 +93,7 @@ ul {
         background-size: cover;
 }
 
+/*This styles the hero image text*/
 .hero-text{
     color:rgb(211, 255, 217);
     font-family: "Bebas Neue";
@@ -93,6 +105,7 @@ ul {
     margin: 0px;
 }
 
+/*This styles the text underneath the main text.*/
 #hero-under-text{
     color: rgb(211, 255, 217);
     margin-top: 120px;
@@ -105,12 +118,14 @@ ul {
     margin-top: 20px;
 }
 
+/*This styles the lines that are in the hero image*/
 .menu-line-hero{
     width:50%;
     position: relative;
     top: 220px;
 }
 
+/*This styles all the lines for all the pages*/
 hr{
     margin-top: 10px;
     margin-bottom: 20px;
@@ -120,6 +135,7 @@ hr{
     border-width: 0;
 }
 
+/*This is the grid for the home page*/
 .home-page-grid {
     display: grid;
     grid-template-columns: repeat(13, 0.5fr);
@@ -141,6 +157,7 @@ hr{
     .div11 { grid-area: 8 / 3 / 9 / 12; }
     .div12 { grid-area: 9 / 1 / 9 / 14; }
 
+/*This styles all the headings for the home page*/
 .menu-hdng{
     color: rgb(10, 18, 42);
     font-family: "Bebas Neue";
@@ -150,6 +167,7 @@ hr{
     font-size: 4rem;
 }
 
+/*This styles all the text in the home page*/
 .menu-txt{
     color: rgb(10, 18, 42);
     font-family: "Bebas Neue";
@@ -161,6 +179,7 @@ hr{
     text-decoration: none;
 }
 
+/*This styles the 3 images on the home page*/
 .three-col-img{
     width:100%;
     border:5px;
@@ -170,6 +189,7 @@ hr{
     font-style:normal;
 }
 
+/*This styles the main grid for the about page*/
 .about-grid {
   display: grid;
   grid-template-columns: repeat(13, 1fr);
@@ -182,6 +202,7 @@ hr{
   .about-txt { grid-area: 1 / 2 / 3 / 13; }
   .about-line2 { grid-area: 3 / 1 / 4 / 14; }
 
+/*This styles the text on the about page*/
 .about-txt{
   margin-top: 75px; 
   text-align: center;
@@ -189,10 +210,12 @@ hr{
   font-family: "Ubuntu";
 }
 
+/*This styles the lines on the about page*/
 .about-line2{
   margin-top: 100px;
 }
 
+/*This styles the second hero image of the home page*/
 .hero-image-home2{
   background-image: url("./images/hero-image-home2.jpeg");
       
@@ -208,6 +231,7 @@ hr{
         padding-bottom: 50px;
 }
 
+/*This styles the 2 layers of images and text on the experiences page*/
 .two-column-left{
   display: grid;
   grid-template-columns: 1fr 3fr;
@@ -217,15 +241,7 @@ hr{
   margin-top: 40px;
 }
 
-.two-column-left{
-  display: grid;
-  grid-template-columns: 1fr 3fr;
-  gap: 50px;
-  width: 80%;
-  margin: auto;
-  margin-top: 40px;
-}
-
+/*This styles the layer that goes on the right*/
 .two-column-right{
   display: grid;
   grid-template-columns: 3fr 1fr;
@@ -235,25 +251,27 @@ hr{
   margin-top: 20px;
 }
 
-
-
+/*This styles all the info on the rest of the pages*/
 .info{
   font-size: 1em;
   text-align:center;
   font-family: "Ubuntu";
 }
 
+/*This styles the text below the second hero image on the home page.*/
 #hero2-txt{
   margin-top: 25px;
   font-size: 1.3em;
 }
 
+/*This styles the images on the experiences on the experience page*/
 .experiences-img{
   width: 400px;
   border-radius: 5px;
   border-style: solid;
 }
 
+/*This styles the hero image of the experiences page*/
 .experiences-hero{
   background-image: url("./images/experiences-hero-img.jpg");
       
@@ -266,17 +284,21 @@ hr{
         background-size: cover;
 }
 
+/*This styles the text that goes on the left on the experiences page*/
 .experience-txt-left{
   text-align: left;
 }
+
 
 .experience-txt-right{
   text-align: right;
 }
 
+
 .experience-text-hdng{
   text-align: center;
 }
+
 
 .details-section {
   display: grid;
@@ -289,10 +311,12 @@ hr{
   .details-img { grid-area: 1 / 1 / 3 / 6; }
   .details-txt { grid-area: 1 / 2 / 2 / 5; }
 
+
 .details-img{
   background-color: rgb(130, 150, 75);
 
 }
+
 
 .details-txt{
   margin-top: 15px;
@@ -300,10 +324,12 @@ hr{
   text-align: center;
 }
 
+
 .details-line{
   position:relative;
 }
-  
+ 
+
 .booking-form {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
@@ -324,15 +350,19 @@ hr{
   font-family: "Ubuntu";
 }
 
+
 .booking-experience{
   text-align: center;
   font-family: "Ubuntu";
 }
 
+
 .contact-info{
   text-align: center;
   font-family: "Ubuntu";
+  font-style: bold;
 }
+
 
 .experiences-choice{
   font-family: "Ubuntu";
@@ -340,11 +370,13 @@ hr{
   margin-top: 50px;
 }
 
+
 .submit{
   text-align: center;
   font-family: "Ubuntu";
   margin-top: 50px;
 }
+
 
 .booking-txt{
   margin-top:auto;
