--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
 
+
 /*This styles the background colour and resets all the margins and paddings*/
 body{
     background-color: rgb(221, 255, 217);
@@ -15,6 +16,7 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    z-index: 999;
     overflow: hidden;
     background-color: rgb(195,49,73);
     font-family:"Bebas Neue";
@@ -289,17 +291,17 @@ hr{
   text-align: left;
 }
 
-
+/*This styles the text that goes on the right on the experiences page*/
 .experience-txt-right{
   text-align: right;
 }
 
-
+/*This styles the headings that goes on the text on the experiences page*/
 .experience-text-hdng{
   text-align: center;
 }
 
-
+/*This is the grid layout for the details section*/
 .details-section {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
@@ -308,28 +310,29 @@ hr{
   grid-row-gap: 0px;
   }
   
-  .details-img { grid-area: 1 / 1 / 3 / 6; }
+  .details-bg { grid-area: 1 / 1 / 3 / 6; }
   .details-txt { grid-area: 1 / 2 / 2 / 5; }
 
+/*This is the background colour for the details section*/
 
-.details-img{
+/*This is the background colour for the details section*/
+.details-bg{
   background-color: rgb(130, 150, 75);
-
 }
 
-
+/*This styles the text for the details section*/
 .details-txt{
   margin-top: 15px;
   margin-bottom: 15px;
   text-align: center;
 }
 
-
+/*This styles the line for the details section*/
 .details-line{
   position:relative;
 }
  
-
+/*This is grid layout for the booking form*/
 .booking-form {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
@@ -344,45 +347,34 @@ hr{
   .experiences-choice { grid-area: 2 / 3 / 4 / 5; }
   .submit{ grid-area: 3 / 3 / 4 / 4;}
 
-
-.booking-hdng{
-  text-align: center;
-  font-family: "Ubuntu";
-}
-
-
+/*This styles the heading for the booking form*/
 .booking-experience{
   text-align: center;
   font-family: "Ubuntu";
 }
 
-
+/*This styles the contact user input section of the booking form*/
 .contact-info{
   text-align: center;
   font-family: "Ubuntu";
   font-style: bold;
 }
 
-
+/*This styles the choices for the booking form*/
 .experiences-choice{
   font-family: "Ubuntu";
   margin-left: 5%;
   margin-top: 50px;
 }
 
-
+/*This styles the submit button for the booking form*/
 .submit{
   text-align: center;
   font-family: "Ubuntu";
   margin-top: 50px;
 }
 
-
-.booking-txt{
-  margin-top:auto;
-}
-
-
+/*This styles the hero image section for the booking page*/
 .hero-image-booking{
   background-image: url("./images/hero-img-booking.jpeg");
       
