everything done (yes, this is the last time, im being fr)

--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ ul {
 }
 
 /*This styles the image of the about page*/
-+.hero-image-about{
+.hero-image-about{
   background-image: url("./images/about-hero-img.png");
       
 
